--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,4 @@
-.App {
-  position: absolute;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  /* justify-content: center; */
-  background-color: black;
-  height: 100vh;
-  width: 100vw;
-}
-
-.base{
-  width: 50vw;
-  height: 50vh;
-}
-
 .container{
-  background-color: rgb(64, 64, 64);
-  width: 50vw;
-  height: 100vh;
+  max-width: 70vw;
+  margin: 20px auto;
 }
