--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+html{
+  background-image: linear-gradient(45deg, #ffff, #8B99F5);
+  min-height: 100vh;
+  /* background-color: red !important; */
+}
 .container{
   max-width: 70vw;
   margin: 20px auto;
