--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 html{
-  background-image: linear-gradient(45deg, #ffff, #8B99F5);
+  /* background-image: linear-gradient(45deg, #ffff, #8B99F5); */
   min-height: 100vh;
-  /* background-color: red !important; */
-}
+  background-color: black;}
 .container{
   max-width: 70vw;
   margin: 20px auto;
