--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 html{
-  /* background-image: linear-gradient(45deg, #ffff, #8B99F5); */
+  background-color: rgb(231, 231, 231);
   min-height: 100vh;
-  background-color: black;}
+  /* background-color: black; */
+}
 .container{
   max-width: 70vw;
   margin: 20px auto;
