--- a/src/components/current_weather/current-weather.css
+++ b/src/components/current_weather/current-weather.css
@@ -1,14 +1,50 @@
-.weather{
+.weather {
     width: 300px;
     border-radius: 10px;
     box-shadow: 10px -2px 20px 2px rgb(0 0 0/0.3);
-    margin:20px auto 0 auto ;
+    margin: 20px auto 0 auto;
     color: white;
+    background-color: rgb(76, 76, 76);
+    padding: 0 20px 20px 20px;
 }
 
-.top{
+.top,
+.bottom {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+}
+
+.city {
+    margin: 0;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    line-height: 1;
+    letter-spacing: 1px;
+}
+
+.weather-description {
+    font-weight: 400;
+    font-size: 14px;
+    margin: 0;
+    line-height: 1;
+}
+
+.weather-icon {
+    width: 100px;
+}
+
+.temperature{
+    font-family: 'Roboto',sans-serif;
+     font-weight: 600;
+     font-size: 70px;
+     width: auto;
+     letter-spacing: -4px;
+     margin: 10px 0;
+}
+
+.details{
+    width: 100%;
+    padding-left: 20px;
 }
