--- a/src/components/current_weather/current-weather.css
+++ b/src/components/current_weather/current-weather.css
@@ -4,7 +4,7 @@
     box-shadow: 10px -2px 20px 2px rgb(0 0 0/0.3);
     margin: 20px auto 0 auto;
     color: white;
-    background-color: rgb(76, 76, 76);
+    background-color: rgb(61, 61, 61);
     padding: 0 20px 20px 20px;
 }
 
@@ -26,9 +26,10 @@
 
 .weather-description {
     font-weight: 400;
-    font-size: 14px;
-    margin: 0;
+    font-size: 12px;
+    margin-top: 8px;
     line-height: 1;
+    text-transform: uppercase;
 }
 
 .weather-icon {
@@ -47,6 +48,7 @@
 .details{
     width: 100%;
     padding-left: 20px;
+    line-height: 1.4;
 }
 
 .first  {
@@ -67,5 +69,6 @@
 .parameter-value{
     text-align: right;
     font-weight: 600;
+    letter-spacing: 1px;
     font-size: 13px;
 }
