--- a/src/components/forecast/forecast.css
+++ b/src/components/forecast/forecast.css
@@ -1,4 +1,107 @@
-.title{
+.card-section{
+    display: flex;
+}
+
+.future{
+    position :relative;
+    width: 170px;
+    font-family: 'Open sans', sans-serif;
+    background-color: rgb(231, 231, 231);
+    border-radius: 10px;
+    padding: 10px;
+    transition: all 200ms ease-in;
+}
+
+.future:hover > .main-future > img{
+    filter: blur(8px) brightness(120%);
+    transition: all 400ms ease-out;
+}
+.future:hover > .future-details{
+    opacity: 1;
+    transition: all 200ms ease-out;
+}
+
+.future:hover{
+    box-shadow: 2px 5px 5px rgb(0 0 0 / 0.3);
+}
+
+
+.future-details{
+    opacity: 0;
+    position: absolute;
+    top: 50px;
+    transform: translateX(-15px);
+    margin-left: 15px;
+    font-size: 14px;
+    width: 170px;
+    transition: all 300ms ease-in;
+    cursor: pointer;
+
+}
+
+
+
+
+.future-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;     
+}
+
+.future-row{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+.future-label{
+    text-align: left;
+    /* margin-inline: 8px; */
+    
+}
+.future-value{
+    text-align: right;
+    /* margin-inline: 0px; */
+
+}
+
+.main-future{
+    display: flex;
+    /* opacity: 0; */
+    flex-direction: column;
+    /* padding: 10px 10px; */
+    cursor: pointer;
+}
+
+.day{
+    text-align: center;
+    font-size: 20px;
+}
+
+.day > img{
+    transition: all 300ms ease-in-out;
+}
+
+.text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 18px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* .title{
     font-size: 23px;
     font-weight: 700;
 
@@ -64,4 +167,4 @@
 }
 .daily-details-grid-item label:last-child{
     color: #212121;
-}
+} */
