--- a/src/components/forecast/forecast.css
+++ b/src/components/forecast/forecast.css
@@ -1,20 +1,23 @@
 .card-section{
-    display: flex;
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: repeat(5, 170px);
 }
 
 .future{
     position :relative;
     width: 170px;
     font-family: 'Open sans', sans-serif;
-    background-color: rgb(231, 231, 231);
+    background-color: white;
     border-radius: 10px;
     padding: 10px;
+    margin-inline: 20px;
     transition: all 200ms ease-in;
 }
 
 .future:hover > .main-future > img{
-    filter: blur(8px) brightness(120%);
-    transition: all 400ms ease-out;
+    opacity: 0;
+    transition: all 300ms ease-out;
 }
 .future:hover > .future-details{
     opacity: 1;
@@ -22,8 +25,48 @@
 }
 
 .future:hover{
-    box-shadow: 2px 5px 5px rgb(0 0 0 / 0.3);
+    box-shadow: 6px 5px 5px rgb(0 0 0 / 0.3);
 }
+
+.main-future{
+    display: flex;
+    /* opacity: 0; */
+    flex-direction: column;
+    /* padding: 10px 10px; */
+    cursor: pointer;
+}
+
+.day{
+    text-align: center;
+    font-size: 20px;
+}
+
+.day > img{
+    transition: all 300ms ease-in-out;
+    opacity: 1;
+}
+
+.text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    font-size: 18px;
+}
+
+.text > .desc{
+    font-size: 15px;
+    margin-bottom: 2px;
+}
+
+.min-temp{
+    color: rgb(69, 69, 69);
+    margin-left: 10px;
+}
+
+
+
 
 
 .future-details{
@@ -64,32 +107,6 @@
     /* margin-inline: 0px; */
 
 }
-
-.main-future{
-    display: flex;
-    /* opacity: 0; */
-    flex-direction: column;
-    /* padding: 10px 10px; */
-    cursor: pointer;
-}
-
-.day{
-    text-align: center;
-    font-size: 20px;
-}
-
-.day > img{
-    transition: all 300ms ease-in-out;
-}
-
-.text{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 18px;
-}
-
 
 
 
