--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,19 @@ html{
   min-height: 100vh;
   /* background-color: black; */
 }
-.container{
-  max-width: 70vw;
-  margin: 20px auto;
+
+
+.main-container{
+  margin: 50px;
+  font-family: 'Open sans', sans-serif;
+  width: 70vw;
+  margin-inline:auto ;
+  background-color: white;
+  padding-inline: 20px;
+  border-radius: 10px;
+  padding-bottom: 20px;
 }
+
 
 .h3_font{
   font-size: 1.3rem;
@@ -19,9 +28,14 @@ html{
   
 }
 
+
+.search{
+  padding-top: 2rem;
+  margin-block: 1rem;
+}
 .chart{
   max-width: 70vw;
-  max-height: 300px;
+  min-height: 300px;
   margin-inline:auto;
   
 }
